<?xml version="1.0"?>
<package>
  <name>wpbh_local_planner</name>
  <version>0.0.1</version>
  <description>The wpbh_local_planner package</description>

  <maintainer email="zhangwanjie@6-robot.com">Zhang Wanjie</maintainer>

  <license>BSD</license>

  <author email="zhangwanjie@6-robot.com">Zhang Wanjie</author>
  <url type="website">http://wiki.ros.org/wpb_home_app</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>

   <export>
    <nav_core plugin="${prefix}/wpbh_local_planner_plugin.xml"/>
  </export>

</package>